--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-	"chrome_url_overrides": {
-		"newtab": "newtab.html"
-	},
-	"description": "A speed dial functionally similar to the one used in Opera.",
-	"icons": {
-		"128": "icons/icon128.png",
-		"48": "icons/icon48.png",
-		"16": "icons/icon16.png"
-	},
-	"manifest_version": 3,
-	"name": "Simple Speed Dial",
-	"options_page": "options.html",
-	"permissions": [ "bookmarks", "storage" ],
-	"background": { "service_worker": "javascript/eventPage.js" },
-	"update_url": "http://clients2.google.com/service/update2/crx",
-	"version": "2.5.0"
+    "chrome_url_overrides": {
+        "newtab": "newtab.html"
+    },
+    "description": "A speed dial functionally similar to the one used in Opera.",
+    "icons": {
+        "128": "icons/icon128.png",
+        "48": "icons/icon48.png",
+        "16": "icons/icon16.png"
+    },
+    "manifest_version": 3,
+    "name": "Simple Speed Dial 2",
+    "options_page": "options.html",
+    "permissions": ["bookmarks", "storage"],
+    "background": { "service_worker": "javascript/eventPage.js" },
+    "update_url": "http://clients2.google.com/service/update2/crx",
+    "version": "0.0.1"
 }
